# 7_Scratch_Neural_Network

./: .gitignore  CMakeLists.txt  Makefile  PAPER.md  README.md  pyproject.toml
cpp/: CMakeLists.txt
cpp/bindings/: pybind_module.cpp
cpp/core/: tensor.cu  tensor.hpp
include/: snn.hpp
include/backend/: backend.hpp
include/data/: loader.h  loader.hpp
include/math/: matrix.h  matrix.hpp  random.h  random.hpp  scalar.h
include/network/: layer.h  layer.hpp  model.h  model.hpp  neuron.h  relu_layer.h
include/python/: bindings.hpp
old_tests/: data_tests.cpp  examples.cpp  math_tests.cpp  nn_tests.cpp
python/scratchneuralnetwork/: __init__.py  dataset.py  layer.py  model.py  tensor.py
src/backend/: backend.cpp
src/data/: loader.cpp
src/math/: matrix.cpp  matrix.cu  random.cpp
src/network/: layer.cpp  model.cpp
src/python/: bindings.cpp
tests/: NEW_PYTHON_TESTS.py  data_tests.cpp  examples.cpp  general_tests.cpp  math_tests.cpp  nn_tests.cpp  python_tests.py
